--- a/index.html
+++ b/index.html
@@ -19,35 +19,38 @@
     <h1>SPLI <br />  TTER</h1>
 
     <div class="card">
-      <div class="bill subcard">
-        <h2 class="general-h2">Bill</h2>
-        <div class="input__field">
-          <img class="input__icon" src="images/icon-dollar.svg" alt="">
-          <input class="input" type="text" name="bill" placeholder="142.55">
+      <div class="card__inputs">
+        <div class="bill subcard">
+          <h2 class="general-h2">Bill</h2>
+          <div class="input__field">
+            <img class="input__icon" src="images/icon-dollar.svg" alt="">
+            <input id="input-bill" class="input" type="text" placeholder="142.55"/>
+          </div>
+        </div>
+
+        <div class="select-tip subcard">
+          <h2 class="general-h2">Select Tip %</h2>
+          <div class="tip-buttons">
+            <button class="button button--tip-percentage" value="5">5%</button>
+            <button class="button button--tip-percentage" value="10">10%</button>
+            <button class="button button--tip-percentage" value="15">15%</button>
+            <button class="button button--tip-percentage" value="25">25%</button>
+            <button class="button button--tip-percentage" value="50">50%</button>
+            <button class="button button--tip-percentage" value="100">Custom</button>
+          </div>
+
+        </div>
+
+        <div class="number-of-people subcard">
+          <h2 class="general-h2">Number of People</h2>
+          <div class="input__field">
+            <img class="input__icon" src="images/icon-person.svg" alt="">
+            <input id="input-people" class="input" type="number" name="" placeholder="5">
+          </div>
+
         </div>
       </div>
 
-      <div class="select-tip subcard">
-        <h2 class="general-h2">Select Tip %</h2>
-        <div class="tip-buttons">
-          <button class="button button--tip-percentage">5%</button>
-          <button class="button button--tip-percentage">10%</button>
-          <button class="button button--tip-percentage">15%</button>
-          <button class="button button--tip-percentage">25%</button>
-          <button class="button button--tip-percentage">50%</button>
-          <button class="button button--tip-percentage">Custom</button>
-        </div>
-
-      </div>
-
-      <div class="number-of-people subcard">
-        <h2 class="general-h2">Number of People</h2>
-        <div class="input__field">
-          <img class="input__icon" src="images/icon-person.svg" alt="">
-          <input class="input" type="number" name="" placeholder="5">
-        </div>
-
-      </div>
 
       <div class="summary">
         <div class="summary__card-set">
@@ -56,7 +59,7 @@
               <h2 class="general-h2 summary__h2">Tip Amount</h2>
               <p class="summary__p">/ person</p>
             </div>
-            <strong class="summary__result">$3.5</strong>
+            <strong id="result-tip" class="summary__result">$0</strong>
           </div>
 
           <div class="summary__card">
@@ -65,12 +68,12 @@
               <p class="summary__p">/ person</p>
             </div>
 
-            <strong class="summary__result">$24.1</strong>
+            <strong id="result-total" class="summary__result">$0</strong>
           </div>
         </div>
 
-
-        <button class="button button--reset">RESET</button>
+        <button id="button__calculate" class="button button--reset">CALCULATE</button>
+        <button id="button__reset" class="button button--reset">RESET</button>
 
       </div>
 
