--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <h2 class="general-h2">Bill</h2>
           <div class="input__field">
             <img class="input__icon" src="images/icon-dollar.svg" alt="">
-            <input id="input-bill" class="input" type="text" placeholder="142.55"/>
+            <input id="input-bill" class="input" type="text" placeholder="18.50"/>
           </div>
         </div>
 
@@ -45,7 +45,7 @@
           <h2 class="general-h2">Number of People</h2>
           <div class="input__field">
             <img class="input__icon" src="images/icon-person.svg" alt="">
-            <input id="input-people" class="input" type="number" name="" placeholder="5">
+            <input id="input-people" class="input" type="number" placeholder="4">
           </div>
 
         </div>
