--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
           </div>
         </div>
 
-        <button id="button__calculate" class="button button--reset">CALCULATE</button>
-        <button id="button__reset" class="button button--reset">RESET</button>
+        <button id="button__calculate" class="button button--reset">Calculate</button>
+        <button id="button__reset" class="button button--reset">Reset</button>
 
       </div>
 
