--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
           <h2 class="general-h2">Bill</h2>
           <div class="input__field">
             <img class="input__icon" src="images/icon-dollar.svg" alt="">
-            <input id="input-bill" class="input" type="number" placeholder="18.50"/>
+            <h2 id="must-be-a-number" class="general-h2 input-bill__must-be-a-number">Must be a number</h2>
+            <input id="input-bill" class="input" type="text" placeholder="18.50"/>
           </div>
         </div>
 
@@ -45,7 +46,8 @@
           <h2 class="general-h2">Number of People</h2>
           <div class="input__field">
             <img class="input__icon" src="images/icon-person.svg" alt="">
-            <input id="input-people" class="input" type="number" placeholder="4">
+            <h2 id="must-be-a-number" class="general-h2 input-bill__must-be-a-number">Must be a number</h2>
+            <input id="input-people" class="input" type="text" placeholder="4">
           </div>
 
         </div>
@@ -72,7 +74,6 @@
           </div>
         </div>
 
-        <button id="button__calculate" class="button button--reset">Calculate</button>
         <button id="button__reset" class="button button--reset">Reset</button>
 
       </div>
