--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="input__field">
             <img class="input__icon" src="images/icon-dollar.svg" alt="">
             <h2 id="must-be-a-number" class="general-h2 input-bill__must-be-a-number">Must be a number</h2>
-            <input id="input-bill" class="input" type="text" placeholder="18.50"/>
+            <input id="input-bill" class="input" type="number" placeholder="18.50"/>
           </div>
         </div>
 
@@ -47,7 +47,7 @@
           <div class="input__field">
             <img class="input__icon" src="images/icon-person.svg" alt="">
             <h2 id="must-be-a-number" class="general-h2 input-bill__must-be-a-number">Must be a number</h2>
-            <input id="input-people" class="input" type="text" placeholder="4">
+            <input id="input-people" class="input" type="number" placeholder="4">
           </div>
 
         </div>
