--- a/index.html
+++ b/index.html
@@ -24,17 +24,11 @@
           <h2 class="general-h2">Bill</h2>
           <div class="input__field">
             <img class="input__icon" src="images/icon-dollar.svg" alt="">
-            <h2 id="warning-info-bill" class="general-h2 input-bill__warning-info">Must be greater than zero</h2>
+            <h2 id="warning-info-bill" class="general-h2 input__warning-info"></h2>
             <input id="input-bill"
                    class="input"
                    type="number"
-                   placeholder="18.50"
-                   onkeydown="return event.keyCode === 8 ||
-                                     event.keyCode === 46 ||
-                                     event.keyCode === 37 ||
-                                     event.keyCode === 39 ||
-                                     event.keyCode === 190 ?
-                                     true : !isNaN(Number(event.key))"/>
+                   placeholder="18.50"/>
           </div>
         </div>
 
@@ -55,16 +49,11 @@
           <h2 class="general-h2">Number of People</h2>
           <div class="input__field">
             <img class="input__icon" src="images/icon-person.svg" alt="">
-            <h2 id="warning-info-people" class="general-h2 input-bill__warning-info">Must be greater than zero</h2>
+            <h2 id="warning-info-people" class="general-h2 input__warning-info"></h2>
             <input id="input-people"
                    class="input"
                    type="number"
-                   placeholder="4"
-                   onkeydown="return event.keyCode === 8 ||
-                                     event.keyCode === 46 ||
-                                     event.keyCode === 37 ||
-                                     event.keyCode === 39 ?
-                                     true : !isNaN(Number(event.key))"/>
+                   placeholder="4"/>
           </div>
 
         </div>
