--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h2 id="warning-info-people" class="general-h2 input__warning-info"></h2>
             <input id="input-people"
                    class="input"
-                   type="number"
+                   type="text"
                    placeholder="4"/>
           </div>
 
