--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
             <button class="button button--tip-percentage" value="15">15%</button>
             <button class="button button--tip-percentage" value="25">25%</button>
             <button class="button button--tip-percentage" value="50">50%</button>
-            <button class="button button--tip-percentage" value="100">Custom</button>
+            <input id="input-tip"
+                   class="button button--tip-custom"
+                   type="number"
+                   placeholder="Custom"/>
           </div>
+          <h2 id="warning-info-tip" class="general-h2 input__warning-info"></h2>
 
         </div>
 
