--- a/index.html
+++ b/index.html
@@ -94,9 +94,11 @@
 
 
 
-  <script type="text/javascript" src="index.js">
+  <script type="text/javascript" src="js/index.js"></script>
+  <script type="text/javascript" src="js/functions.js"></script>
 
-  </script>
+
+
 
 </body>
 </html>
