--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
 
 
-      <div class="summary">
+      <div class="card__summary">
         <div class="summary__card-set">
           <div class="summary__card">
             <div>
@@ -93,9 +93,9 @@
   </main>
 
 
-
-  <script type="text/javascript" src="js/index.js"></script>
   <script type="text/javascript" src="js/functions.js"></script>
+  <script type="text/javascript" src="js/index.js"></script>
+
 
 
 
