--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="css/main.css">
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
@@ -19,74 +18,72 @@
     <h1>SPLI <br /> TTER</h1>
 
     <div class="card">
-      <div class="card__inputs">
-        <div class="bill subcard">
-          <h2 class="general-h2">Bill</h2>
-          <div class="input__field">
-            <img class="input__icon" src="images/icon-dollar.svg" alt="">
-            <h2 id="warning-info-bill" class="general-h2 input__warning-info"></h2>
-            <input id="input-bill"
-                   class="input"
+      <section class="card__userData">
+        <article class="userData__article article__bill">
+          <h2 class="header">Bill</h2>
+          <div class="userData__inputArea">
+            <img class="inputArea__icon" src="images/icon-dollar.svg" alt="">
+            <input id="input--bill"
+                   class="inputArea__input"
                    type="number"
                    placeholder="18.50"/>
           </div>
-        </div>
+          <h2 id="warningInfo--bill" class="header header--warningInfo"></h2>
+        </article>
 
-        <div class="select-tip subcard">
-          <h2 class="general-h2">Select Tip %</h2>
-          <div class="tip-buttons">
-            <button class="button button--tip-percentage" value="5">5%</button>
-            <button class="button button--tip-percentage" value="10">10%</button>
-            <button class="button button--tip-percentage" value="15">15%</button>
-            <button class="button button--tip-percentage" value="25">25%</button>
-            <button class="button button--tip-percentage" value="50">50%</button>
-            <input id="input-tip"
-                   class="button button--tip-custom"
+        <article class="userData__article article__selectTip">
+          <h2 class="header">Select Tip %</h2>
+          <div class="userData__tipButtons">
+            <button class="button button--tipButton" value="5">5%</button>
+            <button class="button button--tipButton" value="10">10%</button>
+            <button class="button button--tipButton" value="15">15%</button>
+            <button class="button button--tipButton" value="25">25%</button>
+            <button class="button button--tipButton" value="50">50%</button>
+            <input id="input--tip"
+                   class="button tipButtons__input"
                    type="number"
                    placeholder="Custom"/>
           </div>
-          <h2 id="warning-info-tip" class="general-h2 input__warning-info"></h2>
+          <h2 id="warningInfo--tip" class="header header--warningInfo"></h2>
+        </article>
 
-        </div>
-
-        <div class="number-of-people subcard">
-          <h2 class="general-h2">Number of People</h2>
-          <div class="input__field">
-            <img class="input__icon" src="images/icon-person.svg" alt="">
-            <h2 id="warning-info-people" class="general-h2 input__warning-info"></h2>
-            <input id="input-people"
-                   class="input"
+        <article class="userData__article article__numberOfPeople">
+          <h2 class="header">Number of People</h2>
+          <div class="userData__inputArea">
+            <img class="inputArea__icon" src="images/icon-person.svg" alt="">
+            <input id="input--people"
+                   class="inputArea__input"
                    type="number"
                    placeholder="4"/>
           </div>
+          <h2 id="warningInfo--people" class="header header--warningInfo"></h2>
 
-        </div>
-      </div>
+        </article>
+      </section>
 
 
-      <div class="card__summary">
-        <div class="summary__card-set">
-          <div class="summary__card">
+      <section class="card__summary">
+        <div class="summary__results">
+          <article class="results__article">
             <div>
-              <h2 class="general-h2 summary__h2">Tip Amount</h2>
-              <p class="summary__p">/ person</p>
+              <h2 class="header header--results">Tip Amount</h2>
+              <p class="results__subheader">/ person</p>
             </div>
-            <strong id="result-tip" class="summary__result">$0</strong>
-          </div>
+            <strong id="results--tip" class="results__value">$0</strong>
+          </article>
 
-          <div class="summary__card">
+          <article class="results__article">
             <div>
-              <h2 class="general-h2 summary__h2">Total</h2>
-              <p class="summary__p">/ person</p>
+              <h2 class="header header--results">Total</h2>
+              <p class="results__subheader">/ person</p>
             </div>
-
-            <strong id="result-total" class="summary__result">$0</strong>
-          </div>
+            <strong id="results--total" class="results__value">$0</strong>
+          </article>
         </div>
 
-        <button id="button__reset" class="button button--reset">Reset</button>
+        <button id="button--reset" class="button button--reset">Reset</button>
 
-      </div>
+      </section>
 
     </div>
 
@@ -95,10 +92,6 @@
 
   <script type="text/javascript" src="js/functions.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
-
-
-
-
 
 </body>
 </html>
