--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="card">
       <section class="card__userData">
-        <article class="userData__article article__bill">
+        <article class="userData__article">
           <h2 class="header">Bill</h2>
           <div class="userData__inputArea">
             <img class="inputArea__icon" src="images/icon-dollar.svg" alt="">
@@ -31,7 +31,7 @@
           <h2 id="warningInfo--bill" class="header header--warningInfo"></h2>
         </article>
 
-        <article class="userData__article article__selectTip">
+        <article class="userData__article">
           <h2 class="header">Select Tip %</h2>
           <div class="userData__tipButtons">
             <button class="button button--tipButton" value="5">5%</button>
@@ -47,7 +47,7 @@
           <h2 id="warningInfo--tip" class="header header--warningInfo"></h2>
         </article>
 
-        <article class="userData__article article__numberOfPeople">
+        <article class="userData__article">
           <h2 class="header">Number of People</h2>
           <div class="userData__inputArea">
             <img class="inputArea__icon" src="images/icon-person.svg" alt="">
@@ -67,7 +67,7 @@
           <article class="results__article">
             <div>
               <h2 class="header header--results">Tip Amount</h2>
-              <p class="results__subheader">/ person</p>
+              <p class="header header--results header--subheader">/ person</p>
             </div>
             <strong id="results--tip" class="results__value">$0</strong>
           </article>
@@ -75,7 +75,7 @@
           <article class="results__article">
             <div>
               <h2 class="header header--results">Total</h2>
-              <p class="results__subheader">/ person</p>
+              <p class="header header--results header--subheader">/ person</p>
             </div>
             <strong id="results--total" class="results__value">$0</strong>
           </article>
