Implementing @mixin button

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         <article class="userData__article">
           <h2 class="header">Select Tip %</h2>
           <div class="userData__tipButtons">
-            <button class="button button--tipButton" value="5">5%</button>
-            <button class="button button--tipButton" value="10">10%</button>
-            <button class="button button--tipButton" value="15">15%</button>
-            <button class="button button--tipButton" value="25">25%</button>
-            <button class="button button--tipButton" value="50">50%</button>
+            <button class="button--tipButton" value="5">5%</button>
+            <button class="button--tipButton" value="10">10%</button>
+            <button class="button--tipButton" value="15">15%</button>
+            <button class="button--tipButton" value="25">25%</button>
+            <button class="button--tipButton" value="50">50%</button>
             <input id="input--tip"
-                   class="button tipButtons__input"
+                   class="tipButtons__input"
                    type="number"
                    placeholder="Custom"/>
           </div>
@@ -81,7 +81,7 @@
           </article>
         </div>
 
-        <button id="button--reset" class="button button--reset">Reset</button>
+        <button id="button--reset" class="button--reset">Reset</button>
 
       </section>
 
