tipButtonToggler working correctly

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <button class="button--tipButton" value="25">25%</button>
             <button class="button--tipButton" value="50">50%</button>
             <input id="input--tip"
-                   class="tipButtons__input"
+                   class="button--tipButton button--customTipButton"
                    type="number"
                    placeholder="Custom"/>
           </div>
@@ -90,8 +90,7 @@
   </main>
 
 
-  <script type="text/javascript" src="js/functions.js"></script>
-  <script type="text/javascript" src="js/index.js"></script>
+  <script type="module" src="js/index.js"></script>
 
 </body>
 </html>
