Autofocus added on bill input

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             <input id="input--bill"
                    class="inputArea__input"
                    type="number"
-                   placeholder="18.50"/>
+                   placeholder="18.50"
+                   autofocus/>
           </div>
           <h2 id="warningInfo--bill" class="header--warningInfo"></h2>
         </article>
