--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                    placeholder="18.50"
                    step="0.01"
                    min="0"
-                   max="999999"
+                   max="9999999"
                    autofocus/>
           </div>
           <h2 id="warningInfo--bill" class="header--warningInfo"></h2>
@@ -61,7 +61,7 @@
                    class="inputArea__input"
                    type="number"
                    min="1"
-                   max="9999"
+                   max="99999"
                    placeholder="4"/>
           </div>
           <h2 id="warningInfo--people" class="header--warningInfo"></h2>
