Replacing dollars with euros

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <h2 class="header--results">Tip Amount</h2>
               <p class="header--results header--subheader">/ person</p>
             </div>
-            <strong id="results--tip" class="results__value">$0</strong>
+            <strong id="results--tip" class="results__value">€0</strong>
           </article>
 
           <article class="results__article">
@@ -87,7 +87,7 @@
               <h2 class="header--results">Total</h2>
               <p class="header--results header--subheader">/ person</p>
             </div>
-            <strong id="results--total" class="results__value">$0</strong>
+            <strong id="results--total" class="results__value">€0</strong>
           </article>
 
         </div>
