"Bill" icon change

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/232e89c80e.js" crossorigin="anonymous"></script>
   <title>Tip calculator app</title>
 
 </head>
@@ -23,7 +24,7 @@
         <article class="userData__article article__bill">
           <label class="header" for="input--bill">Bill</label>
           <div class="userData__inputArea">
-            <img class="inputArea__icon" src="images/icon-dollar.svg" alt="">
+            <i class="fa-solid fa-file-invoice-dollar fa-sm inputArea__icon"></i>      
             <input id="input--bill"
                    class="inputArea__input"
                    type="number"
