Futher updating of README

--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
             <input id="input--tip"
                    class="button--tipButton button--customTipButton"
                    type="number"
+                   step="0.01"
                    min="0"
-                   max="1000"
+                   max="9999"
                    placeholder="Custom"/>
           </div>
           <h2 id="warningInfo--tip" class="header--warningInfo"></h2>
