--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="scss/main.scss">
+  <link rel="stylesheet" href="./scss/main.scss">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/232e89c80e.js" crossorigin="anonymous"></script>
-  <script type="module" src="js/index.js"></script>
+  <script type="module" src="./js/index.js"></script>
   <title>Tip calculator app</title>
 
 </head>
