--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="./scss/main.scss">
+  <link rel="stylesheet" href="./css/main.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
@@ -25,7 +25,7 @@
         <article class="userData__article article__bill">
           <label class="header" for="input--bill">Bill</label>
           <div class="userData__inputArea">
-            <i class="fa-solid fa-file-invoice-dollar fa-sm inputArea__icon"></i>
+            <span class="fa-solid fa-file-invoice-dollar fa-sm inputArea__icon"></span>
             <input id="input--bill"
                    class="inputArea__input"
                    type="number"
@@ -35,7 +35,7 @@
                    max="9999999"
                    autofocus/>
           </div>
-          <h2 id="warningInfo--bill" class="header--warningInfo"></h2>
+          <h3 id="warningInfo--bill" class="header--warningInfo">Warning Info</h3>
         </article>
 
         <article class="userData__article article__selectTip">
@@ -54,7 +54,7 @@
                    max="9999"
                    placeholder="Custom"/>
           </div>
-          <h2 id="warningInfo--tip" class="header--warningInfo"></h2>
+          <h3 id="warningInfo--tip" class="header--warningInfo">Warning Info</h3>
         </article>
 
         <article class="userData__article article__numberOfPeople">
@@ -68,7 +68,7 @@
                    max="99999"
                    placeholder="4"/>
           </div>
-          <h2 id="warningInfo--people" class="header--warningInfo"></h2>
+          <h3 id="warningInfo--people" class="header--warningInfo">Warning Info</h3>
         </article>
 
       </section>
