--- a/index.html
+++ b/index.html
@@ -1,1 +1,136 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="icon" type="image/png" sizes="32x32" href="dist/favicon-32x32.fe944b6e.png"><link rel="stylesheet" href="dist/index.ff3405fd.css"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet"><script src="https://kit.fontawesome.com/232e89c80e.js" crossorigin></script><script type="module" src="dist/index.b335920d.js"></script><title>Tip calculator app</title></head><body> <main> <h1>SPLI<br>TTER</h1> <div class="card"> <section class="card__userData"> <article class="article__bill userData__article"> <label class="header" for="input--bill">Bill</label> <div class="userData__inputArea"> <span class="fa-file-invoice-dollar fa-sm fa-solid inputArea__icon"></span> <input id="input--bill" class="inputArea__input" type="number" placeholder="84.50" step="0.01" min="0" max="9999999" autofocus> </div> <h3 id="warningInfo--bill" class="header--warningInfo">Warning Info</h3> </article> <article class="article__selectTip userData__article"> <label class="header" for="input--tip">Select Tip %</label> <div class="userData__tipButtons"> <button class="button--tipButton" value="5">5%</button> <button class="button--tipButton" value="10">10%</button> <button class="button--tipButton" value="15">15%</button> <button class="button--tipButton" value="25">25%</button> <button class="button--tipButton" value="50">50%</button> <input id="input--tip" class="button--customTipButton button--tipButton" type="number" step="0.01" min="0" max="9999" placeholder="Custom"> </div> <h3 id="warningInfo--tip" class="header--warningInfo">Warning Info</h3> </article> <article class="article__numberOfPeople userData__article"> <h2 class="header" for="input--people">Number of People</h2> <div class="userData__inputArea"> <img class="inputArea__icon" src="dist/icon-person.27244280.svg" alt=""> <input id="input--people" class="inputArea__input" type="number" min="1" max="99999" placeholder="4"> </div> <h3 id="warningInfo--people" class="header--warningInfo">Warning Info</h3> </article> </section> <section class="card__summary"> <div class="summary__results"> <article class="results__article"> <div> <h2 class="header--results">Tip Amount</h2> <p class="header--results header--subheader">/ person</p> </div> <strong id="results--tip" class="results__value">€0</strong> </article> <article class="results__article"> <div> <h2 class="header--results">Total</h2> <p class="header--results header--subheader">/ person</p> </div> <strong id="results--total" class="results__value">€0</strong> </article> </div> <button id="button--reset" class="button--reset">Reset</button> </section> </div> </main> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="icon" type="image/png" sizes="32x32" href="/dist/favicon-32x32.3a4ddde5.png">
+  <link rel="stylesheet" href="/dist/index.34df27b5.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/232e89c80e.js" crossorigin="anonymous"></script>
+  <script src="/dist/index.739bf03c.js" defer=""></script>
+  <title>Tip calculator app</title>
+
+</head>
+<body>
+
+  <main>
+    <h1>SPLI<br>TTER</h1>
+
+    <div class="card">
+      <section class="card__userData">
+
+        <article class="userData__article article__bill">
+          <label class="header" for="input--bill">Bill</label>
+          <div class="userData__inputArea">
+            <span class="fa-solid fa-file-invoice-dollar fa-sm inputArea__icon"></span>
+            <input id="input--bill" class="inputArea__input" type="number" placeholder="84.50" step="0.01" min="0" max="9999999" autofocus="">
+          </div>
+          <h3 id="warningInfo--bill" class="header--warningInfo">Warning Info</h3>
+        </article>
+
+        <article class="userData__article article__selectTip">
+          <label class="header" for="input--tip">Select Tip %</label>
+          <div class="userData__tipButtons">
+            <button class="button--tipButton" value="5">5%</button>
+            <button class="button--tipButton" value="10">10%</button>
+            <button class="button--tipButton" value="15">15%</button>
+            <button class="button--tipButton" value="25">25%</button>
+            <button class="button--tipButton" value="50">50%</button>
+            <input id="input--tip" class="button--tipButton button--customTipButton" type="number" step="0.01" min="0" max="9999" placeholder="Custom">
+          </div>
+          <h3 id="warningInfo--tip" class="header--warningInfo">Warning Info</h3>
+        </article>
+
+        <article class="userData__article article__numberOfPeople">
+          <label class="header" for="input--people">Number of People</label>
+          <div class="userData__inputArea">
+            <img class="inputArea__icon" src="/dist/icon-person.a5b0743f.svg" alt="">
+            <input id="input--people" class="inputArea__input" type="number" min="1" max="99999" placeholder="4">
+          </div>
+          <h3 id="warningInfo--people" class="header--warningInfo">Warning Info</h3>
+        </article>
+
+
+
+      </section>
+
+
+      <section class="card__summary">
+        <div class="summary__results">
+
+          <article class="results__article">
+            <div>
+              <h2 class="header--results">Tip Amount</h2>
+              <p class="header--results header--subheader">/ person</p>
+            </div>
+            <strong id="results--tip" class="results__value">€0</strong>
+          </article>
+
+          <article class="results__article">
+            <div>
+              <h2 class="header--results">Total</h2>
+              <p class="header--results header--subheader">/ person</p>
+            </div>
+            <strong id="results--total" class="results__value">€0</strong>
+          </article>
+
+          <div id="currencyModule" class="results__currency">
+
+            <article class="userData__article userData__article--currency">
+              <label class="header header--currency" for="input--currency-bill">Bill currency</label>
+              <div class="userData__inputArea">
+                <select name="pets" id="input--currency-bill" class="inputArea__input inputArea__currency">
+                  <option value="EUR">Euro</option>
+                  <option value="PLN">Polish Złoty</option>
+                  <option value="USD">US Dollar</option>
+                  <option value="GBP">British Pound</option>
+                  <option value="CHF">Swiss Franc</option>
+                  <option value="JPY">Japanese Yen</option>
+                  <option value="UAH">Ukrainian Hryvnia</option>
+                  <option value="RUB">Russian Ruble</option>
+                </select>
+              </div>
+            </article>
+
+            <article class="userData__article userData__article--currency">
+              <label class="header header--currency" for="input--currency-bill">My currency</label>
+              <div class="userData__inputArea">
+                <select name="pets" id="input--currency-user" class="inputArea__input inputArea__currency">
+                  <option value="EUR">Euro</option>
+                  <option value="PLN">Polish Złoty</option>
+                  <option value="USD">US Dollar</option>
+                  <option value="GBP">British Pound</option>
+                  <option value="CHF">Swiss Franc</option>
+                  <option value="JPY">Japanese Yen</option>
+                  <option value="UAH">Ukrainian Hryvnia</option>
+                  <option value="RUB">Russian Ruble</option>
+                </select>
+              </div>
+            </article>
+
+          </div>
+        <span id="currencyInfo" class="header--results header--subheader header--currencyRate">1 EUR = 1.14 USD (23.02.2022)</span>
+        </div>
+
+        <div class="summary__buttons">
+
+          <button id="button--currency" class="button--reset button--enabled">Change currency</button>
+          <button id="button--reset" class="button--reset button--enabled">Reset</button>
+
+        </div>
+
+
+
+
+      </section>
+
+    </div>
+
+  </main>
+
+
+</body>
+</html>
