--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="/dist/favicon-32x32.3a4ddde5.png">
-  <link rel="stylesheet" href="/dist/index.34df27b5.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="dist/favicon-32x32.3a4ddde5.png">
+  <link rel="stylesheet" href="dist/index.34df27b5.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/232e89c80e.js" crossorigin="anonymous"></script>
-  <script src="/dist/index.739bf03c.js" defer=""></script>
+  <script src="dist/index.739bf03c.js" defer=""></script>
   <title>Tip calculator app</title>
 
 </head>
@@ -47,7 +47,7 @@
         <article class="userData__article article__numberOfPeople">
           <label class="header" for="input--people">Number of People</label>
           <div class="userData__inputArea">
-            <img class="inputArea__icon" src="/dist/icon-person.a5b0743f.svg" alt="">
+            <img class="inputArea__icon" src="dist/icon-person.a5b0743f.svg" alt="">
             <input id="input--people" class="inputArea__input" type="number" min="1" max="99999" placeholder="4">
           </div>
           <h3 id="warningInfo--people" class="header--warningInfo">Warning Info</h3>
@@ -112,7 +112,7 @@
             </article>
 
           </div>
-        <span id="currencyInfo" class="header--results header--subheader header--currencyRate">1 EUR = 1.14 USD (23.02.2022)</span>
+        <span id="currencyInfo" class="header--results header--subheader header--currencyRate"></span>
         </div>
 
         <div class="summary__buttons">
