--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <article class="userData__article article__bill">
           <label class="header" for="input--bill">Bill</label>
           <div class="userData__inputArea">
-            <span class="fa-solid fa-file-invoice-dollar fa-sm inputArea__icon"></span>
+            <img class="inputArea__icon" src="dist/icon-dollar.4244b05b.svg" alt="">
             <input id="input--bill" class="inputArea__input" type="number" placeholder="84.50" step="0.01" min="0" max="9999999" autofocus="">
           </div>
           <h3 id="warningInfo--bill" class="header--warningInfo">Warning Info</h3>
