--- a/src/index.html
+++ b/src/index.html
@@ -101,7 +101,7 @@
               <label class="header header--currency" for="input--currency-bill">Bill currency</label>
               <i id="extraInfoBillCurrencyIcon" class="fa-solid fa-circle-question fa-xs"></i>
               <div id="extraInfoBillCurrencyText" class="header header--extraInfoBillCurrency">
-                Pick the currency in which you have paid your bill
+                Pick the currency in which the bill has been paid
               </div>
               <div class="userData__inputArea">
                 <select name="pets" id="input--currency-bill" class="inputArea__input inputArea__currency">
@@ -121,7 +121,7 @@
               <label class="header header--currency" for="input--currency-bill">My currency</label>
               <i id="extraInfoUserCurrencyIcon" class="fa-solid fa-circle-question fa-xs"></i>
               <div id="extraInfoUserCurrencyText" class="header header--extraInfoUserCurrency">
-                Pick the currency in which you want to pay your part
+                Pick the currency in which you want to pay your share
               </div>
               <div class="userData__inputArea">
                 <select name="pets" id="input--currency-user" class="inputArea__input inputArea__currency">
