--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,8 @@
 <body>
 
   <main>
-    <h1>SPLI<br/>TTER</h1>
+    <h1><a href="./index.html">SPLI<br/>TTER</a></h1>
+
 
     <div class="card">
       <section class="card__userData">
