--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@
             </article>
 
             <article class="userData__article userData__article--currency">
-              <label class="header header--currency" for="input--currency-bill">My currency</label>
+              <label class="header header--currency" for="input--currency-user">My currency</label>
               <i id="extraInfoUserCurrencyIcon" class="fa-solid fa-circle-question fa-xs"></i>
               <div id="extraInfoUserCurrencyText" class="header header--extraInfoUserCurrency">
                 Choose the currency in which you want to settle
