--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="dist/favicon-32x32.3a4ddde5.png">
-  <link rel="stylesheet" href="dist/index.34df27b5.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="dist/images/favicon-32x32.png">
+  <link rel="stylesheet" href="dist/css/main.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/232e89c80e.js" crossorigin="anonymous"></script>
-  <script src="dist/index.739bf03c.js" defer=""></script>
+  <script type="module" src="dist/js/index.js"></script>
   <title>Tip calculator app</title>
 
 </head>
 <body>
 
   <main>
-    <h1>SPLI<br>TTER</h1>
+    <h1 class="title"><a href="./index.html">SPLI<br/>TTER</a></h1>
+
 
     <div class="card">
       <section class="card__userData">
@@ -25,8 +26,15 @@
         <article class="userData__article article__bill">
           <label class="header" for="input--bill">Bill</label>
           <div class="userData__inputArea">
-            <img class="inputArea__icon" src="dist/icon-dollar.4244b05b.svg" alt="">
-            <input id="input--bill" class="inputArea__input" type="number" placeholder="84.50" step="0.01" min="0" max="9999999" autofocus="">
+            <img class="inputArea__icon" src="dist/images/icon-dollar.svg" alt="">
+            <input id="input--bill"
+                   class="inputArea__input"
+                   type="number"
+                   placeholder="84.50"
+                   step="0.01"
+                   min="0"
+                   max="9999999"
+                   autofocus/>
           </div>
           <h3 id="warningInfo--bill" class="header--warningInfo">Warning Info</h3>
         </article>
@@ -39,7 +47,13 @@
             <button class="button--tipButton" value="15">15%</button>
             <button class="button--tipButton" value="25">25%</button>
             <button class="button--tipButton" value="50">50%</button>
-            <input id="input--tip" class="button--tipButton button--customTipButton" type="number" step="0.01" min="0" max="9999" placeholder="Custom">
+            <input id="input--tip"
+                   class="button--tipButton button--customTipButton"
+                   type="number"
+                   step="0.01"
+                   min="0"
+                   max="9999"
+                   placeholder="Custom"/>
           </div>
           <h3 id="warningInfo--tip" class="header--warningInfo">Warning Info</h3>
         </article>
@@ -47,8 +61,13 @@
         <article class="userData__article article__numberOfPeople">
           <label class="header" for="input--people">Number of People</label>
           <div class="userData__inputArea">
-            <img class="inputArea__icon" src="dist/icon-person.a5b0743f.svg" alt="">
-            <input id="input--people" class="inputArea__input" type="number" min="1" max="99999" placeholder="4">
+            <img class="inputArea__icon" src="dist/images/icon-person.svg" alt="">
+            <input id="input--people"
+                   class="inputArea__input"
+                   type="number"
+                   min="1"
+                   max="99999"
+                   placeholder="4"/>
           </div>
           <h3 id="warningInfo--people" class="header--warningInfo">Warning Info</h3>
         </article>
@@ -83,7 +102,7 @@
               <label class="header header--currency" for="input--currency-bill">Bill currency</label>
               <i id="extraInfoBillCurrencyIcon" class="fa-solid fa-circle-question fa-xs"></i>
               <div id="extraInfoBillCurrencyText" class="header header--extraInfoBillCurrency">
-                Pick the currency in which the bill has been paid
+                Choose the currency in which the bill was paid
               </div>
               <div class="userData__inputArea">
                 <select name="pets" id="input--currency-bill" class="inputArea__input inputArea__currency">
@@ -100,10 +119,10 @@
             </article>
 
             <article class="userData__article userData__article--currency">
-              <label class="header header--currency" for="input--currency-bill">My currency</label>
+              <label class="header header--currency" for="input--currency-user">My currency</label>
               <i id="extraInfoUserCurrencyIcon" class="fa-solid fa-circle-question fa-xs"></i>
               <div id="extraInfoUserCurrencyText" class="header header--extraInfoUserCurrency">
-                Pick the currency in which you want to pay your share
+                Choose the currency in which you want to settle
               </div>
               <div class="userData__inputArea">
                 <select name="pets" id="input--currency-user" class="inputArea__input inputArea__currency">
