--- a/src/index.html
+++ b/src/index.html
@@ -106,14 +106,14 @@
               </div>
               <div class="userData__inputArea">
                 <select name="pets" id="input--currency-bill" class="inputArea__input inputArea__currency">
-                  <option value="EUR">Euro</option>
-                  <option value="PLN">Polish Złoty</option>
-                  <option value="USD">US Dollar</option>
                   <option value="GBP">British Pound</option>
-                  <option value="CHF">Swiss Franc</option>
+                  <option value="EUR" selected="selected">Euro</option>
                   <option value="JPY">Japanese Yen</option>
+                  <option value="PLN">Polish Złoty</option>
+                  <option value="CHF">Swiss Franc</option>
                   <option value="UAH">Ukrainian Hryvnia</option>
-                  <option value="RUB">Russian Ruble</option>
+                  <option value="USD">US Dollar</option>
+                  <option value="VUV">Vanuatu Vatu</option>
                 </select>
               </div>
             </article>
@@ -126,14 +126,14 @@
               </div>
               <div class="userData__inputArea">
                 <select name="pets" id="input--currency-user" class="inputArea__input inputArea__currency">
-                  <option value="EUR">Euro</option>
-                  <option value="PLN">Polish Złoty</option>
-                  <option value="USD">US Dollar</option>
                   <option value="GBP">British Pound</option>
-                  <option value="CHF">Swiss Franc</option>
+                  <option value="EUR" selected="selected">Euro</option>
                   <option value="JPY">Japanese Yen</option>
+                  <option value="PLN">Polish Złoty</option>
+                  <option value="CHF">Swiss Franc</option>
                   <option value="UAH">Ukrainian Hryvnia</option>
-                  <option value="RUB">Russian Ruble</option>
+                  <option value="USD">US Dollar</option>
+                  <option value="VUV">Vanuatu Vatu</option>
                 </select>
               </div>
             </article>
