Reducing result font size and headers when layout breaks

--- a/src/index.html
+++ b/src/index.html
@@ -82,16 +82,16 @@
 
           <article class="results__article">
             <div>
-              <h2 class="header--results">Tip Amount</h2>
-              <p class="header--results header--subheader">/ person</p>
+              <h2 id="results__tipHeader" class="header--results">Tip Amount</h2>
+              <p id="results__tipHeader--person" class="header--results header--subheader">/ person</p>
             </div>
             <strong id="results--tip" class="results__value">€0</strong>
           </article>
 
           <article class="results__article">
             <div>
-              <h2 class="header--results">Total</h2>
-              <p class="header--results header--subheader">/ person</p>
+              <h2 id="results__totalHeader" class="header--results">Total</h2>
+              <p id="results__totalHeader--person" class="header--results header--subheader">/ person</p>
             </div>
             <strong id="results--total" class="results__value">€0</strong>
           </article>
